--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
         <meta charset="utf-8">
         <meta viewport="content">
         <title>Calculator App</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="script" href="script.js">
     </head>
+    <style>
+        h1 {
+            color:aqua;
+        }
+    </style>
     <body>
         <h1>Calculator for MP</h1>
     </body>
