--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta viewport="content">
-        <title>Calculator App</title>
+        <title>Zach Washburn CV</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="script" href="script.js">
     </head>
     <body>
-        <h1>Calculator for MP</h1>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
+        <h1>Zachary Washburn - B.A Applied Phsyics/Engineering Phsyics</h1>
     </body>
 </html>
