--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <body>
         <div class="topnav">
             <a class="active" href="index.html">Home</a>
-            <a href="contact.html">News</a>
+            <a href="contact.html">Contact</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
         </div>
