--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
+            <a href="contact.html">News</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
         </div>
