--- a/about.html
+++ b/about.html
@@ -9,10 +9,9 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="index.html">Home</a>
+            <a href="index.html">CV</a>
             <a href="contact.html">Contact</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a href="about.html">About Me</a>
         </div>
         <h1>Zachary Washburn - B.A Applied Phsyics/Engineering Phsyics</h1>
         <h2>Current Job:  Engineering Tech 3 with Grant County Public Works</h2>
