--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="index.html">CV</a>
+            <a href="index.html" id="indexPage">CV</a>
             <a href="about.html">About Me</a>
+            <h1 id="menuTitle">About Me</h1>
         </div>
-        <h1>Zachary Washburn - B.A Applied Phsyics/Engineering Phsyics</h1>
-        <h2>Current Job:  Engineering Tech 3 with Grant County Public Works</h2>
+        <h1 class="introTitle">Zachary Washburn - B.A Applied Phsyics/Engineering Phsyics</h1>
     </body>
 </html>
