--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta viewport="content">
-        <title>Zach Washburn CV</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="script" href="script.js">
-    </head>
-    <body>
-        <div class="topnav">
-            <a href="resume.html">CV</a>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <title>Zach Washburn CV</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="script" href="script.js">
+</head>
+
+<body>
+    <div class="outer">
+        <div class="topnav" id="green">
+            <a href="index.html" id="indexPage">CV</a>
             <a href="about.html">About Me</a>
+            <h1 class="introTitle">Zachary Washburn - B.A Applied Phsyics/Engineering Phsyics</h1>
         </div>
-        <h1>Zachary Washburn - B.A Applied Phsyics/Engineering Phsyics</h1>
-    </body>
+        <div class="topnav" id="blue">
+            <h1 id="menuTitle">CV / Resume</h1>
+        </div>
+        </div>
+
+</body>
+
 </html>
