--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
 <body>
     <div class="outer">
         <div class="topnav" id="green">
-            <a href="index.html" id="indexPage">CV</a>
+            <a href="index.html" id="indexPage">Home - CV</a>
+            <a href="" id="experience">Experience</a>
+            <a href="" id="education">Education</a>
             <a href="about.html">About Me</a>
-            <h1 class="introTitle">Zachary Washburn - B.A Applied Phsyics/Engineering Phsyics</h1>
         </div>
         <div class="topnav" id="blue">
             <h1 id="menuTitle">CV / Resume</h1>
         </div>
+    </div>
+    <div>
+        <h1 class="introTitle">Zachary Washburn - B.A. Applied Phsyics/Engineering Phsyics</h1>
+    </div>
+    <div class="Resume">
+        <div class="pic">
+            <img src="Team Photo 2022-2023.jpg" id="Headshot">
         </div>
+    </div>
 
 </body>
 
